(fix) select box text color not showing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,10 @@
     --foreground-rgb: 255, 255, 255;
     --background-rgb: 0, 0, 0;
   }
+
+  select {
+    color: rgb(var(--background-rgb));
+  }
 }
 
 body {
